  * Remove GStreamer 0.10's build dependencies. The real users of it
    should be using phonon with GStreamer 1.0.
  * Add a note for packagers on qt4-default's long description.
  * Remove patches applied upstream:
    - aarch64_arm64_fix_arch_detection.patch
    - fix_libmng_test.patch
    - ppc64el_configure_support.patch
    - cve-2015-0295.diff

  [ Dmitry Shachnev ]
  * Make qt4-qmake suggest libqtcore4, as that package contains configuration
    files for qtchooser, without which /usr/bin/qmake will not work.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 06 Sep 2014 19:50:03 -0300

qt4-x11 (4:4.8.6+git64-g5dc8b2b+dfsg-3) unstable; urgency=medium

  * Team upload.
  * Fix CVE-2015-0295 (DoS vulnerability in BMP images handler).
    Closes: #779550.

 -- Dmitry Shachnev <mitya57@debian.org>  Mon, 02 Mar 2015 17:12:28 +0300

qt4-x11 (4:4.8.6+git64-g5dc8b2b+dfsg-2) unstable; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Remove debian/NEWS, it's no longer accurate.
  * Update symbols files with buildds' logs.

  [ Adam Majer ]
  * Add xmlpatterns_stack_overflow_fix.diff which changes a recursive call
    into iteration fixing stack overflow in XmlPatterns.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 04 Sep 2014 16:25:52 -0300

qt4-x11 (4:4.8.6+git64-g5dc8b2b+dfsg-1) unstable; urgency=medium

  * New upstream snapshot.
  * Disable the use of system proxies by default. It seems that if http_proxy
    is setted then all protocols try to use the proxy.
  * Add support for arm64 (Closes: #735488).
    - Make arm64 use linux-g++ as platform_arg.
    - Fix arch detection.
    - Add qatomic support. This patch is known to not be the most correct way
      to implement them, as it seems to be possible to do it in a faster way,
      but should work non the less until we can provide something better.
    - Add arm64's mkspecs.
  * Add support for ppc64el (Closes: #749743).