@@ -7,7 +7,7 @@ It breaks qmake projects search.
 
 --- a/configure
 +++ b/configure
-@@ -9228,7 +9228,7 @@ fi
+@@ -9235,7 +9235,7 @@ fi
  # .projects.3    -> the rest
  rm -f .projects .projects.1 .projects.2 .projects.3
  
