@@ -8,9 +8,13 @@ Bug-Debian: http://bugs.debian.org/679874
 Forwarded: not-needed
 Last-Update: 2012-06-20
 
+---
+ tools/assistant/tools/assistant/mainwindow.cpp |    3 +--
+ 1 file changed, 1 insertion(+), 2 deletions(-)
+
 --- a/tools/assistant/tools/assistant/mainwindow.cpp
 +++ b/tools/assistant/tools/assistant/mainwindow.cpp
-@@ -945,8 +945,7 @@ void MainWindow::updateApplicationFont()
+@@ -947,8 +947,7 @@ void MainWindow::updateApplicationFont()
      if (helpEngine.usesAppFont())
          font = helpEngine.appFont();
  
