@@ -11,7 +11,7 @@ Last-Update: 2011-04-27
 
 --- a/configure
 +++ b/configure
-@@ -3323,6 +3323,12 @@ if [ -z "${CFG_HOST_ARCH}" ]; then
+@@ -3324,6 +3324,12 @@ if [ -z "${CFG_HOST_ARCH}" ]; then
              ;;
          esac
          ;;
