@@ -13,6 +13,7 @@ qt4-x11 (4:4.8.6+git155-g716fbae+dfsg-1) UNRELEASED; urgency=medium
     - fix_libmng_test.patch
     - ppc64el_configure_support.patch
     - cve-2015-0295.diff
+  * Refresh multiple patches.
 
   [ Dmitry Shachnev ]
   * Make qt4-qmake suggest libqtcore4, as that package contains configuration
